[package]
name = "piggybank"
version = "0.1.0"
description = "Piggy Bank Solana dApp"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "piggybank"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.1", features = ["init-if-needed"] }
